extends Control

# =========================
# UI REFERENCES
# =========================
@onready var question_label = $main/QuestionSection/QuestionLabel
@onready var choices_container = $main/AnswerSection
@onready var hp_bar = $main/TopSection/PlayerHPBar
@onready var boss_hp_bar = $main/TopSection/BossHPBar 
@onready var score_label = $main/TopSection/ScoreLabel
@onready var time_label = $main/TopSection/TimeLabel
@onready var combo_label = $main/TopSection/ComboLabel

# üéµ ‡πÄ‡∏™‡∏µ‡∏¢‡∏á
@onready var audio_click = $AudioClick
@onready var audio_correct = $AudioCorrect
@onready var audio_wrong = $AudioWrong

# =========================
# ‡∏Ñ‡πà‡∏≤‡∏û‡∏∑‡πâ‡∏ô‡∏ê‡∏≤‡∏ô
# =========================
var max_hp = 3.0
var current_hp = 3.0
var boss_hp = 3.0
var current_max_boss_hp = 5.0 # <--- ‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç‡πÄ‡∏õ‡πá‡∏ô 5.0 ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡πÉ‡∏´‡πâ‡∏ï‡πâ‡∏≠‡∏á‡∏ï‡∏≠‡∏ö 5 ‡∏Ç‡πâ‡∏≠
var current_question_data = {}

# =========================
# ‡∏™‡∏ñ‡∏≤‡∏ô‡∏∞
# =========================
var input_locked := false
var battle_ended := false

# =========================
# ‡∏£‡∏∞‡∏ö‡∏ö‡πÄ‡∏ß‡∏•‡∏≤
# =========================
var time_limit := 10.0
var time_left := 10.0
var timer_active := false

# =========================
# ‡∏£‡∏∞‡∏ö‡∏ö‡∏Ñ‡∏≠‡∏°‡πÇ‡∏ö
# =========================
var combo := 0

# =====================================================
# READY
# =====================================================
func _ready():
	# ‡πÄ‡∏ä‡πá‡∏Ñ‡∏õ‡∏£‡∏∞‡πÄ‡∏†‡∏ó‡∏Å‡∏≤‡∏£‡∏ï‡πà‡∏≠‡∏™‡∏π‡πâ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏ï‡∏±‡πâ‡∏á‡∏Ñ‡πà‡∏≤ HP ‡∏®‡∏±‡∏ï‡∏£‡∏π
	if GameDatabase.is_boss_battle:
		current_max_boss_hp = 5.0 # ‡∏ö‡∏≠‡∏™‡πÄ‡∏•‡∏∑‡∏≠‡∏î 5
	else:
		current_max_boss_hp = 1.0 # ‡∏°‡πá‡∏≠‡∏ö‡∏õ‡∏Å‡∏ï‡∏¥‡πÄ‡∏•‡∏∑‡∏≠‡∏î 1
	
	boss_hp = current_max_boss_hp
	current_hp = max_hp
	
	update_hp_bar()
	update_boss_hp_bar()
	update_score_display()
	update_combo_display()
	display_new_question()

# =====================================================
# ‡πÅ‡∏™‡∏î‡∏á‡∏Ñ‡∏≥‡∏ñ‡∏≤‡∏°‡πÉ‡∏´‡∏°‡πà
# =====================================================
# =====================================================
# ‡πÅ‡∏™‡∏î‡∏á‡∏Ñ‡∏≥‡∏ñ‡∏≤‡∏°‡πÉ‡∏´‡∏°‡πà (‡∏û‡∏£‡πâ‡∏≠‡∏°‡∏£‡∏∞‡∏ö‡∏ö‡∏™‡∏∏‡πà‡∏°‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö)
# =====================================================
func display_new_question():
	if battle_ended:
		return

	input_locked = false
	set_buttons_disabled(false)

	var mode = "boss" if GameDatabase.is_boss_battle else "mob"
	current_question_data = GameDatabase.get_question_by_difficulty(mode)
	
	question_label.text = current_question_data["text"]

	# --- [‡πÉ‡∏´‡∏°‡πà] ‡∏£‡∏∞‡∏ö‡∏ö‡∏™‡∏∏‡πà‡∏°‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö ---
	# 1. ‡∏™‡∏£‡πâ‡∏≤‡∏á Array ‡∏Ç‡∏≠‡∏á‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö (‡πÄ‡∏ä‡πà‡∏ô [0, 1, 2, 3])
	var answer_indices = []
	for i in range(current_question_data["answers"].size()):
		answer_indices.append(i)
	
	# 2. ‡∏™‡∏•‡∏±‡∏ö‡∏•‡∏≥‡∏î‡∏±‡∏ö‡πÉ‡∏ô Array (‡πÄ‡∏ä‡πà‡∏ô ‡∏Å‡∏•‡∏≤‡∏¢‡πÄ‡∏õ‡πá‡∏ô [2, 0, 3, 1])
	answer_indices.shuffle() 

	time_left = time_limit
	timer_active = true
	update_time_display()
	
	var buttons = choices_container.get_children()
	for i in range(buttons.size()):
		var btn = buttons[i]
		
		# ‡πÄ‡∏ä‡πá‡∏Ñ‡∏ß‡πà‡∏≤‡∏õ‡∏∏‡πà‡∏°‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏ó‡∏µ‡πà i ‡∏°‡∏µ‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö‡∏ó‡∏µ‡πà‡∏™‡∏∏‡πà‡∏°‡∏°‡∏≤‡∏£‡∏≠‡∏á‡∏£‡∏±‡∏ö‡πÑ‡∏´‡∏°
		if i < answer_indices.size():
			# 3. ‡∏î‡∏∂‡∏á‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏à‡∏£‡∏¥‡∏á (Original Index) ‡∏≠‡∏≠‡∏Å‡∏°‡∏≤‡∏à‡∏≤‡∏Å‡∏Å‡∏≤‡∏£‡∏™‡∏∏‡πà‡∏°
			var original_idx = answer_indices[i]
			
			# 4. ‡πÅ‡∏™‡∏î‡∏á‡∏Ç‡πâ‡∏≠‡∏Ñ‡∏ß‡∏≤‡∏°‡∏à‡∏≤‡∏Å‡∏•‡∏≥‡∏î‡∏±‡∏ö‡∏ó‡∏µ‡πà‡∏™‡∏∏‡πà‡∏°‡πÑ‡∏î‡πâ
			btn.text = current_question_data["answers"][original_idx]
			btn.visible = true
			
			if btn.pressed.is_connected(_on_answer_selected):
				btn.pressed.disconnect(_on_answer_selected)
			
			# 5. ‡∏™‡πà‡∏á‡∏Ñ‡πà‡∏≤ original_idx ‡∏Å‡∏•‡∏±‡∏ö‡πÑ‡∏õ ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡πÉ‡∏´‡πâ‡πÄ‡∏ä‡πá‡∏Ñ‡∏Å‡∏±‡∏ö‡∏Ñ‡πà‡∏≤ 'correct' ‡πÉ‡∏ô Database ‡πÑ‡∏î‡πâ‡∏ñ‡∏π‡∏Å‡∏ï‡πâ‡∏≠‡∏á
			btn.pressed.connect(_on_answer_selected.bind(original_idx))
		else:
			btn.visible = false

# =====================================================
# ‡∏£‡∏∞‡∏ö‡∏ö‡πÄ‡∏ß‡∏•‡∏≤ (‡∏ó‡∏≥‡∏á‡∏≤‡∏ô‡∏ó‡∏∏‡∏Å‡πÄ‡∏ü‡∏£‡∏°)
# =====================================================
func _process(delta):
	if timer_active and not battle_ended:
		time_left -= delta
		update_time_display()

		if time_left <= 0:
			timer_active = false
			time_left = 0
			update_time_display()
			handle_time_out()

# ‡πÄ‡∏°‡∏∑‡πà‡∏≠‡πÄ‡∏ß‡∏•‡∏≤‡∏´‡∏°‡∏î
func handle_time_out():
	if input_locked:
		return

	input_locked = true
	set_buttons_disabled(true)

	if audio_wrong:
		audio_wrong.play()

	combo = 0
	update_combo_display()

	current_hp -= 1
	update_hp_bar()

	check_lose_condition()

	if not battle_ended and current_hp > 0:
		await get_tree().create_timer(0.5).timeout
		display_new_question()

# =====================================================
# ‡πÄ‡∏°‡∏∑‡πà‡∏≠‡πÄ‡∏•‡∏∑‡∏≠‡∏Å‡∏Ñ‡∏≥‡∏ï‡∏≠‡∏ö
# =====================================================
func _on_answer_selected(index):
	if input_locked or battle_ended:
		return
	
	input_locked = true
	timer_active = false
	set_buttons_disabled(true)

	if audio_click:
		audio_click.play()

	if index == current_question_data["correct"]:
		# --- ‡∏Å‡∏£‡∏ì‡∏µ‡∏ï‡∏≠‡∏ö‡∏ñ‡∏π‡∏Å ---
		if audio_correct:
			audio_correct.play()

		combo += 1
		update_combo_display()

		# ‡∏Ñ‡∏≥‡∏ô‡∏ß‡∏ì‡∏Ñ‡∏∞‡πÅ‡∏ô‡∏ô (‡∏û‡∏∑‡πâ‡∏ô‡∏ê‡∏≤‡∏ô + ‡πÇ‡∏ö‡∏ô‡∏±‡∏™‡∏Ñ‡∏≠‡∏°‡πÇ‡∏ö)
		var base_reward = 50 if GameDatabase.is_boss_battle else 10
		var total_reward = base_reward + (combo * 2)
		GameDatabase.total_score += total_reward
		update_score_display()
		
		boss_hp -= 1
		update_boss_hp_bar()
		check_win_condition()
	else:
		# --- ‡∏Å‡∏£‡∏ì‡∏µ‡∏ï‡∏≠‡∏ö‡∏ú‡∏¥‡∏î ---
		if audio_wrong:
			audio_wrong.play()

		combo = 0
		update_combo_display()

		current_hp -= 1
		update_hp_bar()
		check_lose_condition()

	# ‡∏ñ‡πâ‡∏≤‡πÄ‡∏Å‡∏°‡∏¢‡∏±‡∏á‡πÑ‡∏°‡πà‡∏à‡∏ö ‡πÉ‡∏´‡πâ‡∏Ç‡∏∂‡πâ‡∏ô‡∏Ç‡πâ‡∏≠‡πÉ‡∏´‡∏°‡πà
	if not battle_ended and current_hp > 0 and boss_hp > 0:
		await get_tree().create_timer(0.5).timeout
		display_new_question()

# =====================================================
# ‡∏ü‡∏±‡∏á‡∏Å‡πå‡∏ä‡∏±‡∏ô‡∏à‡∏±‡∏î‡∏Å‡∏≤‡∏£ UI ‡πÅ‡∏•‡∏∞‡∏™‡∏ñ‡∏≤‡∏ô‡∏∞
# =====================================================
func set_buttons_disabled(state: bool):
	for btn in choices_container.get_children():
		btn.disabled = state

func update_score_display():
	score_label.text = "Score: " + str(GameDatabase.total_score)

func update_combo_display():
	combo_label.text = "Combo: x" + str(combo)

func update_time_display():
	time_label.text = "Time: " + str(int(time_left))

func update_hp_bar():
	var percentage = (current_hp / max_hp) * 100
	hp_bar.value = percentage
	hp_bar.modulate = Color(1,0,0) if percentage <= 30 else Color(0,1,0)

func update_boss_hp_bar():
	# ‡∏´‡∏•‡∏≠‡∏î‡πÄ‡∏•‡∏∑‡∏≠‡∏î‡∏ö‡∏≠‡∏™‡∏à‡∏∞‡∏Ñ‡∏≥‡∏ô‡∏ß‡∏ì‡∏ï‡∏≤‡∏° max_hp ‡∏•‡πà‡∏≤‡∏™‡∏∏‡∏î (5.0 ‡∏´‡∏£‡∏∑‡∏≠ 1.0)
	boss_hp_bar.value = (boss_hp / current_max_boss_hp) * 100

# =====================================================
# ‡∏ï‡∏£‡∏ß‡∏à‡∏™‡∏≠‡∏ö‡∏Å‡∏≤‡∏£‡πÅ‡∏û‡πâ/‡∏ä‡∏ô‡∏∞
# =====================================================
func check_lose_condition():
	if current_hp <= 0:
		battle_ended = true
		timer_active = false
		GameDatabase.player_last_position = Vector2.ZERO
		await get_tree().create_timer(1.0).timeout
		get_tree().change_scene_to_file("res://scene/game_over_ui.tscn")

func check_win_condition():
	if boss_hp <= 0:
		battle_ended = true
		timer_active = false

		if audio_correct:
			audio_correct.play()

		await get_tree().create_timer(0.8).timeout
		
		if GameDatabase.is_boss_battle:
			# üèÜ ‡πÄ‡∏ä‡πá‡∏Ñ‡∏ß‡πà‡∏≤‡πÄ‡∏õ‡πá‡∏ô‡∏î‡πà‡∏≤‡∏ô‡∏™‡∏∏‡∏î‡∏ó‡πâ‡∏≤‡∏¢ (‡∏î‡πà‡∏≤‡∏ô‡∏ó‡∏µ‡πà 10 ‡∏´‡∏£‡∏∑‡∏≠ index 9) ‡∏´‡∏£‡∏∑‡∏≠‡∏¢‡∏±‡∏á
			if GameDatabase.current_level_index == GameDatabase.levels.size() - 1:
				print("‡∏ä‡∏ô‡∏∞‡∏ö‡∏≠‡∏™‡πÉ‡∏´‡∏ç‡πà‡πÅ‡∏•‡πâ‡∏ß! ‡πÑ‡∏õ‡∏´‡∏ô‡πâ‡∏≤ Win UI")
				get_tree().change_scene_to_file("res://scene/win_ui.tscn")
			else:
				# ‡∏ñ‡πâ‡∏≤‡∏¢‡∏±‡∏á‡πÑ‡∏°‡πà‡πÉ‡∏ä‡πà‡∏î‡πà‡∏≤‡∏ô‡∏™‡∏∏‡∏î‡∏ó‡πâ‡∏≤‡∏¢ ‡πÉ‡∏´‡πâ‡πÑ‡∏õ‡∏´‡∏ô‡πâ‡∏≤‡∏™‡∏£‡∏∏‡∏õ‡∏ú‡∏•‡πÄ‡∏•‡πÄ‡∏ß‡∏•‡∏ï‡∏≤‡∏°‡∏õ‡∏Å‡∏ï‡∏¥
				print("‡∏ä‡∏ô‡∏∞‡∏ö‡∏≠‡∏™‡∏õ‡∏£‡∏∞‡∏à‡∏≥‡∏î‡πà‡∏≤‡∏ô! ‡πÑ‡∏õ‡∏´‡∏ô‡πâ‡∏≤ Level Complete")
				get_tree().change_scene_to_file("res://scene/level_complete.tscn")
		else:
			# ‡∏ä‡∏ô‡∏∞‡∏°‡∏≠‡∏ô‡∏™‡πÄ‡∏ï‡∏≠‡∏£‡πå‡∏õ‡∏Å‡∏ï‡∏¥ ‡πÉ‡∏´‡πâ‡∏Å‡∏•‡∏±‡∏ö‡πÑ‡∏õ‡∏î‡πà‡∏≤‡∏ô‡∏•‡πà‡∏≤‡∏™‡∏∏‡∏î‡∏ó‡∏µ‡πà‡∏ï‡∏≥‡πÅ‡∏´‡∏ô‡πà‡∏á‡πÄ‡∏î‡∏¥‡∏°
			if GameDatabase.last_world_path != "":
				get_tree().change_scene_to_file(GameDatabase.last_world_path)
			else:
				var current_world = GameDatabase.levels[GameDatabase.current_level_index]
				get_tree().change_scene_to_file(current_world)
